--- a/templates/student/show.html.twig
+++ b/templates/student/show.html.twig
@@ -12,8 +12,8 @@
                 <td>{{ student.id }}</td>
             </tr>
             <tr>
-                <th>Birthdate</th>
-                <td>{{ student.birthdate ? student.birthdate|date('Y-m-d H:i:s') : '' }}</td>
+                <th>Age</th>
+                <td>{{ student.age }}</td>
             </tr>
             <tr>
                 <th>Email.value</th>
